fix(OMN-241): address PR #5 review feedback - contract paths and linter improvements
- Fix model import paths in legacy contracts to reference actual module locations
- Remove architecture-violating orchestrator dependency from reducer contract
- Remove undefined ProtocolGraphDatabase dependency from memgraph effect contract
- Align qdrant effect operation_type values with implementation
- Fix legacy utils __init__.py docstring referencing non-existent public path
- Standardize omnibase-core version specifier to >=0.3.5 across pyproject.toml
- Add NotImplementedError guards for unused strict/schema_version parameters
- Improve field name parsing robustness in contract_linter violation handling

Addresses CodeRabbit review feedback:
- 9 CRITICAL issues (legacy contract model paths, architecture violations)
- 1 MAJOR issue (version specifier consistency)
- 2 MINOR issues (contract_linter code quality)

--- a/src/omniintelligence/_legacy/nodes/entity_extraction_compute/v1_0_0/contracts/compute_contract.yaml
+++ b/src/omniintelligence/_legacy/nodes/entity_extraction_compute/v1_0_0/contracts/compute_contract.yaml
@@ -11,8 +11,8 @@ description: |
 
 node_type: compute
 
-input_model: omniintelligence.models.ModelEntityExtractionInput
-output_model: omniintelligence.models.ModelEntityExtractionOutput
+input_model: omniintelligence._legacy.nodes.entity_extraction_compute.v1_0_0.compute.ModelEntityExtractionInput
+output_model: omniintelligence._legacy.nodes.entity_extraction_compute.v1_0_0.compute.ModelEntityExtractionOutput
 
 algorithm:
   algorithm_type: entity_extraction
