--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ types-pyyaml = "^6.0.12.20250915"
 pre-commit = "^4.5.0"
 
 [tool.poetry.group.core.dependencies]
-omnibase-core = "0.3.5"
+omnibase-core = ">=0.3.5"
 omnibase-spi = "0.2.0"
 
 [project]
