--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ pre-commit = "^4.5.0"
 
 [tool.poetry.group.core.dependencies]
 omnibase-core = ">=0.3.5"
-omnibase-spi = "0.2.0"
+omnibase-spi = ">=0.2.0"
 
 [project]
 name = "omniintelligence"
