feat(OMN-241): add parallel validation, CI timing, and watch mode
Implements 3 enhancements from PR review recommendations:

1. Parallel validation for large batches:
   - Added `parallel: bool = False` param to validate_batch()
   - Uses ThreadPoolExecutor when parallel=True and batch > 10 files
   - Also updated standalone validate_contracts_batch() function

2. CI performance timing:
   - Added `time` wrapper to contract validation step
   - Shows real/user/sys timing in CI logs

3. Watch mode for development:
   - Added --watch / -w CLI flag
   - Polls files every 1 second for changes
   - Re-validates on modification with timestamps
   - Clean exit on Ctrl+C

Usage:
  # Parallel validation
  python -m omniintelligence.tools.contract_linter *.yaml --parallel

  # Watch mode
  python -m omniintelligence.tools.contract_linter contract.yaml --watch

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -201,7 +201,9 @@ jobs:
           echo ""
 
           # Run contract linter on all found files
-          uv run python -m omniintelligence.tools.contract_linter --verbose $CONTRACT_FILES
+          echo "Starting contract validation..."
+          time uv run python -m omniintelligence.tools.contract_linter --verbose $CONTRACT_FILES
+          echo "Contract validation complete"
 
   # Summary job - aggregates all job results
   ci-summary:
