--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,10 +10,10 @@ repos:
       - id: ruff
         name: ruff (lint)
         args: [--fix, --exit-non-zero-on-fix]
-        files: ^src/omniintelligence/tools/
+        files: ^(src/omniintelligence/tools/|tests/unit/tools/)
       - id: ruff-format
         name: ruff (format)
-        files: ^src/omniintelligence/tools/
+        files: ^(src/omniintelligence/tools/|tests/unit/tools/)
 
   # MyPy - Static type checking
   - repo: https://github.com/pre-commit/mirrors-mypy
@@ -22,7 +22,7 @@ repos:
       - id: mypy
         name: mypy (type check)
         args: [--strict, --ignore-missing-imports]
-        files: ^src/omniintelligence/tools/
+        files: ^(src/omniintelligence/tools/|tests/unit/tools/)
         additional_dependencies:
           - types-PyYAML
           - pydantic>=2.0.0
