--- a/pyproject.toml
+++ b/pyproject.toml
@@ -219,6 +219,10 @@ ignore = [
     "ISC001",    # Implicit string concatenation (conflicts with formatter)
 ]
 
+[tool.ruff.lint.per-file-ignores]
+# Allow imports inside functions in tests (common for module reset patterns)
+"tests/**/*.py" = ["PLC0415"]
+
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
