--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
   # YAML FORMATTING - Standard across ONEX ecosystem
   # ============================================================================
   - repo: https://github.com/google/yamlfmt
+    # yamlfmt pinned to v0.17.2 for consistency with omnibase_core ecosystem
     rev: v0.17.2
     hooks:
       - id: yamlfmt
@@ -33,9 +34,7 @@ repos:
     hooks:
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
-        exclude: ^\.github/workflows/
       - id: end-of-file-fixer
-        exclude: ^(\.github/workflows/|\.mcp\.json$)
       - id: check-merge-conflict
       - id: check-added-large-files
         args: [--maxkb=1000]
@@ -51,11 +50,13 @@ repos:
         name: ruff (lint)
         args: [--fix, --exit-non-zero-on-fix]
         # Covers: tools/, utils/, runtime/ source code and their tests
+        # test_log_sanitizer.py is included separately as it tests utils/log_sanitizer.py
+        # functionality but lives in tests/unit/ rather than tests/unit/tools/
         files: ^(src/omniintelligence/(tools|utils|runtime)/|tests/unit/(tools/|test_log_sanitizer\.py))
 
       - id: ruff-format
         name: ruff (format)
-        # Same scope as ruff lint
+        # Same scope as ruff lint (see comment above for test_log_sanitizer.py rationale)
         files: ^(src/omniintelligence/(tools|utils|runtime)/|tests/unit/(tools/|test_log_sanitizer\.py))
 
   # ============================================================================
