fix(OMN-433): Exclude GitHub workflows from file hygiene hooks
GitHub workflow files must match main exactly to avoid CI/CD issues.
Added exclude patterns for .github/workflows/ to trailing-whitespace
and end-of-file-fixer hooks. Restored workflow files to match main.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,9 @@ repos:
     hooks:
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
+        exclude: ^\.github/workflows/
       - id: end-of-file-fixer
+        exclude: ^\.github/workflows/
       - id: check-merge-conflict
       - id: check-added-large-files
         args: [--maxkb=1000]
