--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,55 @@ env:
   CACHE_VERSION: "0.1.0"
 
 jobs:
+  # Pre-commit hooks - comprehensive code quality validation
+  pre-commit:
+    name: Pre-commit Hooks
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: ${{ env.UV_VERSION }}
+
+      - name: Cache uv dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: >-
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+            ${{ hashFiles('**/uv.lock') }}-
+            ${{ env.CACHE_VERSION }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('**/uv.lock') }}-
+            uv-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+
+      - name: Install dependencies
+        run: uv sync --group dev --group core
+
+      - name: Cache pre-commit hooks
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: >-
+            pre-commit-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+            ${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            pre-commit-${{ runner.os }}-${{ env.PYTHON_VERSION }}-
+
+      - name: Run pre-commit hooks
+        run: |
+          uv run pre-commit run --all-files --show-diff-on-failure
+
   # Lint job - ruff check and format validation
   lint:
     name: Lint
@@ -242,12 +291,13 @@ jobs:
   ci-summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [lint, type-check, test-unit, contract-validation]
+    needs: [pre-commit, lint, type-check, test-unit, contract-validation]
     if: always()
 
     steps:
       - name: Check results
         run: |
+          precommit="${{ needs.pre-commit.result }}"
           lint="${{ needs.lint.result }}"
           typecheck="${{ needs.type-check.result }}"
           unittest="${{ needs.test-unit.result }}"
@@ -270,6 +320,7 @@ jobs:
           # Results table with status icons
           echo "| Job | Status | Result |" >> $GITHUB_STEP_SUMMARY
           echo "|-----|:------:|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Pre-commit Hooks | $(get_status_icon $precommit) | \`$precommit\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Lint | $(get_status_icon $lint) | \`$lint\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Type Check | $(get_status_icon $typecheck) | \`$typecheck\` |" >> $GITHUB_STEP_SUMMARY
           echo "| Unit Tests | $(get_status_icon $unittest) | \`$unittest\` |" >> $GITHUB_STEP_SUMMARY
@@ -277,7 +328,8 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
 
           # Overall status
-          if [[ "$lint" == "success" ]] && \
+          if [[ "$precommit" == "success" ]] && \
+             [[ "$lint" == "success" ]] && \
              [[ "$typecheck" == "success" ]] && \
              [[ "$unittest" == "success" ]] && \
              [[ "$contracts" == "success" ]]; then
