--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,11 @@ env:
   UV_VERSION: "0.5.14"
   CACHE_VERSION: "0.1.0"
 
+# Permissions required for dorny/paths-filter to access PR file list via GitHub API
+permissions:
+  contents: read
+  pull-requests: read
+
 # Path filter for production code jobs (lint, type-check, test-unit)
 # Scope: tools/, utils/, runtime/ source code and their tests
 # This matches pre-commit hook scope (see .pre-commit-config.yaml)
